--- a/ProjectCountries.Prism/ProjectCountries.Prism/Views/CountriesList.xaml
+++ b/ProjectCountries.Prism/ProjectCountries.Prism/Views/CountriesList.xaml
@@ -3,8 +3,8 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:prism="http://prismlibrary.com"
                 prism:ViewModelLocator.AutowireViewModel="True"
-                x:Class="ProjectCountries.Prism.Views.CountriesList">
-    
+                x:Class="ProjectCountries.Prism.Views.CountriesList"
+                xmlns:ffSvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms">
     <AbsoluteLayout>
         <StackLayout>
             <SearchBar SearchCommand="{Binding SearchCommand}"
@@ -21,6 +21,15 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
+                            <ffSvg:SvgCachedImage Grid.Column="0"
+                                                    Aspect="Fill"
+                                                    Source="{Binding Flag}" 
+                                                    CacheDuration= "50"
+                                                    Margin="5"
+                                                    RetryCount= "3"
+                                                    RetryDelay= "600"
+                                                    WidthRequest="100"
+                                                    HeightRequest="80"/>
                             <StackLayout Grid.Column="1"
                                      VerticalOptions="Center">
                                 <Label Text="{Binding Name}" 
@@ -28,6 +37,8 @@
                                    FontSize="Medium"
                                    LineBreakMode="TailTruncation" />
                             </StackLayout>
+                            <Image Grid.Column="2" 
+                               Source="ic_more_vert"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
